force-app/main/default/objects/Case/fields/Device_Category__c.field-meta.xml
<CustomField>
    <fullName>Device_Category__c</fullName>
    <label>Device Category</label>
    <type>Text</type>
    <formula>TEXT(Asset.Device_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Device category pulled from the related Asset</description>
</CustomField>