force-app/main/default/objects/Case/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Text</type>
    <length>20</length>
    <description>Error code reported by the customer</description>
</CustomField>