force-app/main/default/objects/Case/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <label>Resolution Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>How the issue was resolved</description>
</CustomField>